--- a/apps.html
+++ b/apps.html
@@ -9,11 +9,25 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
+        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the apps section.</p>
+
+    <div class="gamediv">
+        <a href="https://scratch.mit.edu/projects/899094157/fullscreen/">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.fgCO94K-7VOCQW4CN0WRxAHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Soundboard</p>
+        </a>
+    </div>
+
+    <div class="gamediv">
+        <a href="https://safeshare.tv">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.a_TVwrhfd4atjr2HCSdT4QAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">SafeShare</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://www.google.com">
