--- a/changelog.html
+++ b/changelog.html
@@ -9,11 +9,56 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
+        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
+
     <div>
-        <h1>release v0.4 - <span style="color: yellow">5/30/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.5 - <span style="color: yellow">6/2/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added Floopy Phone</li>
+            <li>Fixed BitLife</li>
+            <li>Fixed Flight Simulator 3D v2.8 game description</li>
+            <li>The iframe scrollbars for games are now hidden</li>
+            <li>Updated News</li>
+            <li>Fixed some unblocked website images</li>
+            <li>Game titles when launching a game now have rainbow text</li>
+            <li>Added game Rocket League 2D</li>
+            <li>Added game Monkey Mart</li>
+            <li>Added game Hide and Smash</li>
+            <li>Added game Pixel Smash Duel</li>
+            <li>Added game Swingo</li>
+            <li>Added game Impostor.io</li>
+            <li>Added game Drive Mad</li>
+            <li>Added game Pou</li>
+            <li>Added game Soccer Head</li>
+            <li>Added game Tower Crash 3D</li>
+            <li>Added game Idle Restaurants</li>
+            <li>Added game Doodle Jump</li>
+            <li>Added game Mr.Bullet 3D</li>
+            <li>Added game Rusher Crusher</li>
+            <li>Added game Mutazone</li>
+            <li>Added app SafeShare</li>
+            <li>Added app Soundboard</li>
+            <li>Fixed Artclass link, is unblocked now</li>
+            <li>Added Unblocked Website Interstellar</li>
+            <li>Added Unblocked Website Jordan's Math Homework</li>
+            <li>Added Unblocked Website Kasper The Secret</li>
+            <li>Added Unblocked Website Utopia</li>
+            <li>Added Unblocked Website Colby's Exploitation of Surfskip</li>
+            <li>Added Unblocked Website Morgana's Network</li>
+            <li>Added Unblocked Website Norepted</li>
+            <li>Added Unblocked Website Imperial Networks</li>
+            <li>Added Unblocked Website 𝕹𝖚𝖒𝖇𝖊𝖗 16 𝕭𝖚𝖗𝖓 𝕱𝖗𝖎𝖊𝖘</li>
+            <li>Added Unblocked Website Oroxys</li>
+            <li>Added Unblocked Website Quagmire's Proxy Sites</li>
+            <li>Added Unblocked Website Freddy Networks</li>
+            <li>Fixed Unblocked Website Spellbound Networks div gap</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.4 - <span style="color: yellow">5/30/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added Geometry Dash Classic</li>
             <li>Added Rooftop Snipers</li>
@@ -28,11 +73,7 @@
     </div>
 
     <div>
-<<<<<<< HEAD
         <h1>release v0.3 - <span style="color: yellow">5/29/2024</span> - <span style="color: red">OUTDATED</span></h1>
-=======
-        <h1>release v0.3 - <span style="color: yellow">5/29/2024</span> - <span style="color: lime">LATEST</span></h1>
->>>>>>> dd7998b19cad3b906db3dfe76b35161497f10953
         <ul>
             <li>Added a rainbow scrollbar</li>
             <li>Added Super Mario Wonder</li>
