--- a/floopyphone/index.html
+++ b/floopyphone/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title></title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
+    <h1><span class="floopy">FLOOPY</span> <span class="phone">PHONE</span></h1>
+    <p>Launch a phone directly in your browser!</p>
+    <center><a href="phone.html">LAUNCH PHONE</a></center>
 </body>
 </html>
