--- a/floopyweb.html
+++ b/floopyweb.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
+        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
@@ -174,6 +174,7 @@
                     loadingScreen.remove();
                     loadingText.remove();
                     let gameDivs = document.querySelectorAll('.gamediv');
+                    let stylesLink = document.querySelector('link[href="/styles.css"]');
                     if (stylesLink) stylesLink.remove();
                 })
 
@@ -184,6 +185,7 @@
                     if (stylesLink) stylesLink.remove();
                     fetchAndDisplay(url, index + 1); // Try next proxy recursively
                     // Remove the loading screen
+                    let stylesLink = document.querySelector('link[href="/styles.css"]');
                     loadingScreen.remove();
                     loadingText.remove();
                 });
