--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
+        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Unblocked Websites.</p>
+
+    <div class="gamediv">
+        <a href="https://abyssthing.duckdns.org/">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.96c92cd7a49723a566158abfdefb2f48?rik=3YHLzD5dEt5rww&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fBlack-Backgrounds-HD-1920x1080.png&ehk=SgJLTpJdh0u1X9HyX6qYX1XX73%2bYx86ZMiNXJCzrm%2bk%3d&risl=&pid=ImgRaw&r=0&adlt=strict" alt="Unblocked" width="150" height="150"></button>
+            <p class="gameundertext">Abyss</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://docs.google.com/document/d/11660lIFMe4zDhKm3qHUbkV_K_kGjAm6U1wfdc60QHqw/edit?userstoinvite=zb10003@students.leeschools.net&sharingaction=manageaccess&role=writer" style="position: relative; top: 15px;">
