--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,24 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
+        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.5 - <span style="color: yellow">6/2/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.6 - <span style="color: yellow">6/3/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added game Basketball Line</li>
+            <li>Added game Car Rush</li>
+            <li>Added game Fruita Crush</li>
+            <li>Added game Stick Merge</li>
+            <li>Added game Stick Merge 2</li>
+            <li>Added Unblocked Website Abyss</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.5 - <span style="color: yellow">6/2/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added Floopy Phone</li>
             <li>Fixed BitLife</li>
