--- a/floopyweb.html
+++ b/floopyweb.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
+        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
