--- a/games1.html
+++ b/games1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">📢 v0.5 JUST DROPPED! FIFTEEN NEW GAMES, FLOOPY PHONE, AND MORE! 😎 <i>[v0.5]</i></p>
+        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -55,7 +55,40 @@
         </a>
     </div>
 
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.4Ji_d6jRIQ2wnsEryHSZ0gAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Stick Merge 2</p>
+        </a>
+    </div>
 
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.v8f2lkcwygajfHy9npZlrgHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Stick Merge</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.NRGUX_zniDrD4eVXzFNkoAAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Fruita Crush</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.94sIM3BILt6jUzITka8hDQAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Car Rush</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.0vC4Xl6un_O_EAbfmoo4TgAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Basketball Line</p>
+        </a>
+    </div>
 
     <div class="gamediv" onclick="deleteGameDivs(event)">
         <a>
