--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,28 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
+        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.6 - <span style="color: yellow">6/3/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.7 - <span style="color: yellow">6/4/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Fixed black outline around game logo on the menu</li>
+            <li>Rainbow outline on all common buttons (for example: the buttons in games)</li>
+            <li>Added TV Shows to TV</li>
+            <li>Added game counter</li>
+            <li>Added game Dino Game</li>
+            <li>Added game Slither.io</li>
+            <li>Added game Appel</li>
+            <li>Added game Agar.io</li>
+            <li>Added game Paper.io</li>
+            <li>Added game Paper.io 2</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.6 - <span style="color: yellow">6/3/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added game Basketball Line</li>
             <li>Added game Car Rush</li>
