--- a/tv.html
+++ b/tv.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
+        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -51,13 +51,78 @@
 
         <div class="gamediv">
             <a href="https://docs.google.com/presentation/d/1OjrWHYHz5xbxhVYfWbDF4J0NdM3AYHC9x2pTchv4GuU/edit#slide=id.g26f6dcac621_1_0" class="tvchoicebtn" style="background-color: black;">
-                <img src="https://th.bing.com/th/id/R.b7223a7771ca0e7262326b97171cc7a1?rik=JEC44iNqS24mEw&pid=ImgRaw&r=0&adlt=strict" alt="Paramount+" width="200" height="100">
+                <img src="https://th.bing.com/th/id/R.b7223a7771ca0e7262326b97171cc7a1?rik=JEC44iNqS24mEw&pid=ImgRaw&r=0&adlt=strict" alt="Roku" width="200" height="100">
             </a>
             <p class="gameundertext">Roku</p>
         </div>
     </center>
 
     <h2 class="rainbow-text">TV Shows</h2>
+
+    <center>
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/11W6C-Jqv9iQVasqjfiaYz77puax1UTjH" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.K5BPW4wtcGlGOaUm6H97TgHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Family Guy</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1PzKaoaK4blzlaoxnwC20gZoeYE5mDxWL" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.FFvKhU5CTcMp-VtJF8BM8AHaHs?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">South Park</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/u/0/folders/1rM_wiU6k3TbIDvrp3kt72-4BFWO4GC7G" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.gHSPKeapcfqlOLIIM6L7dQHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Sonic X</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1q_NeRaY-fU59j9eiZQMs5bu-uFDb7oK9" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/R.afe8529ff2595b7fccaea15bdf10caa5?rik=XiPYhGfUrmESFA&pid=ImgRaw&r=0&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Sonic Prime</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1sPnb40kcPEmi_ZuV0DJGdLphn7HejJFK" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.ZTtq-_-Qidwz8qJ8VrIGBgHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Sonic Underground</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1lRpUrOPlpKu3UfRmE2Bfhwtyt4LW8tmB" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/R.60b88dbe6d16e5b62683fd3a20fb1d21?rik=h10JhTWfnRBnnQ&pid=ImgRaw&r=0&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Sonic 1993</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1P08W5o2K-hyR7w5F11mWo9ltAw3ZLbkA" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.ZzhB6CITGQLeWXhpFjesAQHaD4?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Knuckles</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/1I7-ZUInlg9jb4R6LGq0qX3n7bjGKPFFO" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.SRRP_b6a6B-79Rp7l2Gs0wHaLH?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Pokémon</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://drive.google.com/drive/folders/17ODzdQoYZZxX6ANHFLo0tD1UIkllvCui" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.r4Fsed3_niC7UTuW1WWNEQHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="TV Show" width="150" height="200">
+            </a>
+            <p class="gameundertext">Rick and Morty</p>
+        </div>
+    </center>
 
 
 
