--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👍 v0.6 IS HERE! FIVE NEW GAMES, AND ONE NEW UNBLOCKED WEBSITE! 🤩 <i>[v0.6]</i></p>
+        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
