--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,26 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
+        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.7 - <span style="color: yellow">6/4/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.8 - <span style="color: yellow">6/5/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added game Brawl Stars (Scratch)</li>
+            <li>Added game Hole.io</li>
+            <li>Added game Aquapark.io</li>
+            <li>Added game Wormate.io</li>
+            <li>Added game DeathCar.io</li>
+            <li>Added game Animal.io</li>
+            <li>Added game Drift Dudes</li>
+            <li>Added game Stair Race 3D</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.7 - <span style="color: yellow">6/4/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Fixed black outline around game logo on the menu</li>
             <li>Rainbow outline on all common buttons (for example: the buttons in games)</li>
