--- a/games1.html
+++ b/games1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
+        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -48,13 +48,69 @@
         });
     </script>
 
-    <h2 style="text-align: center;"><span class="game-count-1">PLAY</span> <span class="game-count-2">64</span> <span class="game-count-1">GAMES</span></h2>
+    <h2 style="text-align: center;"><span class="game-count-1">PLAY</span> <span class="game-count-2">72</span> <span class="game-count-1">GAMES</span></h2>
 
     <div class="gamediv" onclick="deleteGameDivs(event)" style="display: none;">
         <a>
             <button class="choicegamebtn"><img src="" alt="Game" width="150" height="150"></button>
             <p class="gameundertext"></p>
             <!-- PLACEHOLDER DIV PLEASE IGNORE -->
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.j2wINEMCRvsivOrNABUbdQHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Stair Race 3D</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.O4H9ehsj6k6Bb_FUUNB6sAHaD4?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Drift Dudes</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.lQjF35vmby1uhA0js4JJ3QAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Animal.io</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.toOkR184VIOEMHXJRQ7jegHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">DeathCar.io</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.D7NAyPtjx_vZdZYHw1D-sAHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Wormate.io</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.3b4adc4e5ffec36588a373d11f9e0b90?rik=T2S6rNlJhf2wWA&pid=ImgRaw&r=0&sres=1&sresct=1&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Aquapark.io</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.aRd6Fh9Ctgq_9fq9ux0aowHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Hole.io</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.TQ4eW01LP8_GQUn2CofHiwHaG4?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Brawl Stars <br>(Scratch)</br></p>
         </a>
     </div>
 
