--- a/floopyweb.html
+++ b/floopyweb.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😀 v0.7 is here! 6 new games and new features! 👍 <i>[v0.7]</i></p>
+        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
