--- a/floopyweb.html
+++ b/floopyweb.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
+        <p class="updatetext">💻 Ninth update is here! 7 NEW games and new features! 😄 <i>[v0.9]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
