--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
+        <p class="updatetext">💻 Ninth update is here! 7 NEW games and new features! 😄 <i>[v0.9]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -43,36 +43,36 @@
     <center><img src="img/logo.jpg" alt="Logo" class="logo"></center>
     <h2 class="rainbow-text">Top 5 Games</h2>
     <center>
-        <div class="gamediv" onclick="deleteGameDivs(event)">
+        <div class="gamediv" onclick="loadGameByDiv(event)">
             <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.5vXow_Z6IzzomCeIAljSTgAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
             <p class="gameundertext">1v1.lol</p>
         </div>
     
-        <div class="gamediv" onclick="deleteGameDivs(event)">
+        <div class="gamediv" onclick="loadGameByDiv(event)">
             <a>
                 <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.Osg6TzeOTsN3ybaoiM6oPAAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
                 <p class="gameundertext">Slope</p>
             </a>
         </div>
 
-        <div class="gamediv" onclick="deleteGameDivs(event)">
+        <div class="gamediv" onclick="loadGameByDiv(event)">
             <a>
                 <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.f3e08e3f8db8d2baa4b1a0d244afb2f4?rik=qCQFRLzRDD8gew&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
                 <p class="gameundertext">BitLife</p>
             </a>
         </div>
 
-        <div class="gamediv" onclick="deleteGameDivs(event)">
+        <div class="gamediv" onclick="loadGameByDiv(event)">
             <a>
                 <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.HGRRtFdLoE2taBuSSluS7AAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
                 <p class="gameundertext">Tunnel Rush</p>
             </a>
         </div>
 
-        <div class="gamediv" onclick="deleteGameDivs(event)">
+        <div class="gamediv" onclick="loadGameByDiv(event)">
             <a>
-                <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.7ef6C_pHSKsEqaNc0PNtEwHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
-                <p class="gameundertext">Retro Bowl</p>
+                <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.6QLx6-8zOkh7KT5Km-jvmQHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+                <p class="gameundertext">Crazy Cars</p>
             </a>
         </div>
     </center>
