--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,28 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 Eighth update is here! 8 NEW games! 😁 <i>[v0.8]</i></p>
+        <p class="updatetext">💻 Ninth update is here! 7 NEW games and new features! 😄 <i>[v0.9]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.8 - <span style="color: yellow">6/5/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.9 - <span style="color: yellow">6/6/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Retro Bowl is switched with Crazy Cars in top games</li>
+            <li>Added random game button</li>
+            <li>Added game WarriorSurvival.io</li>
+            <li>Added game Super Mario 64</li>
+            <li>Added game Trains.io</li>
+            <li>Added game EatTheFish.io</li>
+            <li>Added game Bad Ice Cream</li>
+            <li>Added game Bad Ice Cream 2</li>
+            <li>Added game Bad Ice Cream 3</li>
+            <li>Added upcoming search bar and category dropbox to games section</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.8 - <span style="color: yellow">6/5/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added game Brawl Stars (Scratch)</li>
             <li>Added game Hole.io</li>
