--- a/apps.html
+++ b/apps.html
@@ -16,6 +16,13 @@
     <p class="undertop">Welcome to the apps section.</p>
 
     <div class="gamediv">
+        <a href="https://scratch.mit.edu/projects/121652582/fullscreen">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.c3e1d1f95bccf73560af5d5e21a73ca8?rik=M19pTGyOG30IHg&pid=ImgRaw&r=0&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Android</p>
+        </a>
+    </div>
+
+    <div class="gamediv">
         <a href="https://scratch.mit.edu/projects/899094157/fullscreen/">
             <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.fgCO94K-7VOCQW4CN0WRxAHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
             <p class="gameundertext">Soundboard</p>
