--- a/changelog.html
+++ b/changelog.html
@@ -14,7 +14,19 @@
     </div>
 
     <div>
-        <h1>release v0.9 - <span style="color: yellow">6/6/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.0 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added game JustFall.LOL</li>
+            <li>Added game Tetris</li>
+            <li>Added game Google Snake</li>
+            <li>Added Search bar to games</li>
+            <li>Added app Android</li>
+            <li>Game Paper.io 2 no longer runs on Scratch</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.9 - <span style="color: yellow">6/6/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Retro Bowl is switched with Crazy Cars in top games</li>
             <li>Added random game button</li>
