--- a/games1.html
+++ b/games1.html
@@ -58,7 +58,7 @@
         <a>
             <button class="choicegamebtn"><img src="" alt="Game" width="150" height="150"></button>
             <p class="gameundertext"></p>
-            <!-- PLACEHOLDER DIV PLEASE IGNORE -->
+            <!-- PLACEHOLDER DIV PLEASE IGNORE!!! -->
         </a>
     </div>
 
